<resources>
    <string name="app_name">CosmoAlias</string>
    <string name="rules_button">Rules</string>
    <string name="new_game_button">New game</string>
    <string name="continue_button">Continue</string>
    <string name="about_app_string">About App</string>
    <string name="cosmo_alias_presented">Cosmo Alias:</string>
    <string name="rules_games_title">Rules of the game</string>
    <string name="rules_article_1">The game is played by teams of two or more people. The task of each player of the team is to explain as many words as possible on the screen, but in other words, using, for example, synonyms, antonyms and clues so that members of your team can guess as many words as possible before the time runs out. The more words the team guessed, the more points it will earn.</string>
    <string name="explain_rules_article">When explaining words, you can not mention any part of the word. You can use synonyms. You can also use antonyms as an alternative. You may not use foreign languages unless all players agree.\n\nThe guessed word must match exactly. The explaining player helps the guessers find the correct form of the word. If the word has two parts and someone guesses the first part, you can then use that part of the word in further explanation.</string>
    <string name="scoring_rules_title">Scoring</string>
    <string name="scoring_rules_article">For each word guessed, the team receives one point. The team with the most points is considered the winner. If at the end of the last round the teams have the same number of points, then an additional round is held.</string>
    <string name="p_s_title_rules">P.S</string>
    <string name="ps_article_rules">It\'s a party game! Therefore, you can agree among yourself and make the rules more flexible for yourself.</string>
    <string name="teamHeadTitle">Teams</string>
    <string name="next_string_team">Next</string>
    <string name="enter_new_name_string_team">Create team</string>
    <string name="random_name">Random name team</string>
    <string name="word_sets_string">Word sets</string>
    <string name="enter">Choose</string>
    <string name="settings_string">Settings</string>
    <string name="save_string">Save</string>
    <string name="count_words_string">Number of words</string>
    <string name="long_round_string">Round length (sec)</string>
    <string name="count_around_string">Number of laps</string>
    <string name="default_count_word">120</string>
    <string name="default_long_round">60</string>
    <string name="default_count_around">4</string>
    <string name="own_set_string">My set</string>
    <string name="add_new_set_string">Add new set</string>
    <string name="title_enter_name_set">Enter a name for the set of words</string>
    <string name="title_enter_words">Enter words</string>
    <string name="sample_sets_string">5 to 20 characters</string>
    <string name="team_score_title">Team score</string>
    <string name="start_string">Start</string>
    <string name="team_sting">Team</string>
    <string name="default_zero">0</string>
    <string name="score_string">points</string>
    <string name="default_time">60 seconds</string>
    <string name="card_preview_text">Press \"Start\" when you are ready</string>
    <string name="enter_name_team">Enter team name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="restrictions_input">Enter name 3\-12 characters</string>
    <string name="rules_min_team">At least two teams are required to play the game</string>
    <string name="rules_max_team">The game is designed for 5 teams</string>
    <string name="base_lvl">A basic level</string>
    <string name="enter_description">Enter a description for the set</string>
    <string name="sample_description_string">For example Set for a light party</string>
    <string name="sample_words_string">Enter words separated by commas</string>
    <string name="set_create_message">A new set has been created</string>
    <string name="set_error_message">Fill in all the fields</string>
    <string name="plays_status">Plays</string>
    <string name="awaiting_status">Awaiting</string>
    <string name="played_status">Played</string>
    <string name="seconds_left">%1$s\nseconds</string>
    <string name="setting_save">Settings have been saved</string>
    <string name="btn_ok">Start a new game!</string>
    <string name="congratulation_string">Victory!</string>
    <string name="team_string">Team</string>
    <string name="win_galaxy_cup">wins the Galactic Cup</string>
    <string name="point_string">points</string>
    <string name="share_your_achievement">Share your achievement</string>
    <string name="message_for_share">My team %1$s\ won the CosmoAlias with %2$d\ points</string>
    <string name="sure">Confirm</string>
    <string name="remove_permission_question">Are you sure you want to delete?</string>
    <string name="team_created_message">Team created</string>
    <string name="team_update_message">Team changed</string>
    <string name="error_message_setting">You have entered an invalid data range</string>
    <string name="hint_number_laps">2–6</string>
    <string name="hint_round_length">10–120</string>
    <string name="hint_word_count">50–500</string>
    <string name="prompt_for_delete_edit">Swipe to delete team\nClick to change name</string>
    <string name="error_message_duplicate_team">This team name already exists</string>
    <string name="about_app_article_string">This is a mobile version of the beloved Alias game. The goal of the players is to explain the word to teammates, without using gestures, pronouncing the hidden word and words with the same root. The team that guessed the most words at the end of all rounds wins.</string>
    <string name="count_word">%1$s\ words</string>
</resources>