<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_500"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewHeadTitleOwnSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/own_set_string"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/frame_background"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeadTitleOwnSet"
        app:layout_constraintBottom_toTopOf="@+id/addNewSet"
        android:layout_marginVertical="24dp"
        android:padding="16dp">
        
        <TextView
            android:id="@+id/titleEnterNameSet"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_enter_name_set"
            android:textSize="18sp"
            android:textColor="@color/purple_700"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/fieldNameSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:hint="@string/sample_sets_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEnterNameSet"/>

        <TextView
            android:id="@+id/titleEnterWords"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_enter_words"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldNameSet" />

        <EditText
            android:id="@+id/fieldWords"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEnterWords"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addNewSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:text="@string/add_new_set_string"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="57dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>