<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image_team"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="center"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/textViewHeadTitleTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/teamHeadTitle"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerNameTeam"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="24dp"
            android:padding="24dp"
            android:background="@drawable/frame_background_transparent"
            app:layout_constraintBottom_toTopOf="@+id/button_random_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeadTitleTeam">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_for_delete_edit"
            android:textStyle="bold"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerNameTeam"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="24dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next_team"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="53dp"
            android:background="@drawable/gradient"
            android:text="@string/next_string_team"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_enter_new_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gradient"
            android:text="@string/enter_new_name_string_team"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_next_team"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_random_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gradient"
            android:text="@string/random_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_enter_new_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>