<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_700"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/textViewHeadTitleTimeRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:text="@string/default_time"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageCardBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/card_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHeadTitleTimeRound"
        app:layout_constraintBottom_toTopOf="@id/buttonStartPlayGame"/>

    <TextView
        android:id="@+id/fieldGameWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_preview_text"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingHorizontal="60dp"
        app:layout_constraintStart_toStartOf="@id/imageCardBackground"
        app:layout_constraintEnd_toEndOf="@id/imageCardBackground"
        app:layout_constraintTop_toTopOf="@id/imageCardBackground"
        app:layout_constraintBottom_toBottomOf="@id/imageCardBackground"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStartPlayGame"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/gradient"
        android:text="@string/start_string"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>